# demon_goat_salon

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: README.md
src/: consts.rs  main.rs
src/animation/: animation_state.rs  mod.rs  sprite_animation.rs
src/couch/: mod.rs
src/customer/: customer_timer.rs  mod.rs
src/engine/: asset_loader.rs  game_runner.rs  input_manager.rs  mod.rs  physics_engine.rs
src/game_world/: goat.rs  imp_player.rs  mod.rs  salon.rs
src/imp/: mod.rs  score.rs
src/salon/: mod.rs
src/ui/: customer_details.rs  game_over.rs  main_menu.rs  mod.rs
