[package]
name = "demon_goat_salon"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = "0.16.1"
bevy_asset_loader = "0.23.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.web-release]
inherits = "release"
opt-level = "z"
